--- a/src/DesafioSoftPlan.Api/DesafioSoftPlan.Api.csproj
+++ b/src/DesafioSoftPlan.Api/DesafioSoftPlan.Api.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
