--- a/src/DesafioSoftPlan.Api/DesafioSoftPlan.Api.csproj
+++ b/src/DesafioSoftPlan.Api/DesafioSoftPlan.Api.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DesafioSoftPlan.Negocio\DesafioSoftPlan.Negocio.csproj" />
+  </ItemGroup>
+
 
 </Project>
